# TinyMediaViewer

./: .gitignore  CHANGELOG.md  README.md  architecture_analysis2.md  run-dev.sh
.github/workflows/: ci.yml
archive/node-legacy/: README.md  architecture_analysis.md
archive/node-legacy/server/: package-lock.json  package.json
archive/node-legacy/server/scripts/: audit-account-counts.mjs  backend-compat.test.mjs  backend-runner.mjs  contract-compare.mjs  perf-assert.mjs  perf-bench.mjs  playwright-smoke.mjs
archive/node-legacy/server/src/: app.ts  index_store.ts  routes.ts  scanner.ts  server.test.ts  server.ts  video_thumbnail_cache.ts
archive/node-legacy/shared-types/: index.d.ts
backend-rs/: Cargo.toml
backend-rs/crates/tmv-backend-api/: Cargo.toml
backend-rs/crates/tmv-backend-api/src/: lib.rs
backend-rs/crates/tmv-backend-app/: Cargo.toml
backend-rs/crates/tmv-backend-app/src/: main.rs
backend-rs/crates/tmv-backend-core/: Cargo.toml
backend-rs/crates/tmv-backend-core/src/: contracts.rs  diagnostics.rs  favorites.rs  lib.rs  manifest.rs  media.rs  paths.rs  preview.rs  runtime.rs  scan.rs  service_types.rs  snapshot.rs  system_usage.rs
backend-rs/crates/tmv-backend-core/src/thumbnail/: image.rs  mod.rs  video.rs  video_macos.rs
backend-rs/crates/tmv-backend-index/: Cargo.toml
backend-rs/crates/tmv-backend-index/src/: bin.rs  lib.rs
backend-rs/crates/tmv-backend-watch/: Cargo.toml
backend-rs/crates/tmv-backend-watch/src/: lib.rs
backend-rs/crates/tmv-contract-export/: Cargo.toml
backend-rs/crates/tmv-contract-export/src/: main.rs
desktop/: README.md  package-lock.json  package.json
desktop/scripts/: prepare-bundle.sh
desktop/src/: App.css  App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  config.rs  diagnostics.rs  lib.rs  service_manager.rs  viewer_gateway.rs
server/: package-lock.json  package.json
server/scripts/: backend-runner.mjs  perf-assert.mjs  perf-bench.mjs  perf-compare.mjs  playwright-smoke.mjs  profile-rust-persisted.mjs
server/src/: app.ts  config.ts  index_store.ts  routes.ts  scanner.ts  server.test.ts  server.ts
shared-types/: package.json
web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
web/e2e/: app.spec.ts
web/scripts/: benchmark-api.mjs  benchmark-ui.mjs  cpu-monitor.sh  profile-backend.mjs  start-e2e-backend.mjs
web/scripts/lib/: api-benchmark.mjs  fixture-media-root.mjs  tmv-stack.mjs
web/src/: App.css  App.lazy.test.tsx  App.light.test.tsx  App.race.test.tsx  App.tsx  api.ts  contracts.test.ts  index.css  main.tsx  types.ts  utils.ts  vite-env.d.ts
web/src/components/: CategoryList.test.tsx  CategoryList.tsx  CategoryListVirtualViewport.tsx  FolderCard.tsx  MainContent.tsx  MediaGrid.test.tsx  MediaGrid.tsx  MediaGridVirtualRows.tsx  MediaPreviewModal.tsx  Toolbar.tsx
web/src/features/category/: mediaUtils.test.ts  mediaUtils.ts  useCategoryMedia.test.tsx  useCategoryMedia.ts
web/src/features/effects/: EffectsStage.tsx  HeartPulseLayer.tsx  ParticleField.tsx  effects.css  renderers.ts
web/src/features/preview/: MediaPreviewModal.test.tsx  MediaPreviewModal.tsx  preview.css  useModalNavigation.ts
web/src/features/previews/: usePreviewBackfillQueue.ts
web/src/features/root/: rootStore.test.ts  rootStore.ts  useRootFolder.ts
web/src/features/session/: useAuthRedirect.ts  useCategorySelectionCoordinator.test.tsx  useCategorySelectionCoordinator.ts  useCategorySession.ts  useRefreshCoordinator.test.tsx  useRefreshCoordinator.ts  useRootSession.test.tsx  useRootSession.ts  useViewerPersistence.ts  useViewerSession.ts
web/src/features/systemUsage/: SystemUsageModal.tsx  system-usage.css  useSystemUsageReport.ts
web/src/features/ui/: useAppInteractions.test.tsx  useAppInteractions.ts  useThemeAndPerf.test.tsx  useThemeAndPerf.ts  useViewerPreferences.ts
web/src/test/: performanceFixtures.ts  queryClient.tsx  setup.ts
