[workspace]
members = [
  "crates/tmv-backend-app",
  "crates/tmv-backend-api",
  "crates/tmv-backend-core",
  "crates/tmv-contract-export",
  "crates/tmv-backend-index",
  "crates/tmv-backend-watch",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
bincode = "1"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6"
futures = "0.3"
mime_guess = "2"
notify = "8"
percent-encoding = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
ts-rs = { version = "10", features = ["serde-compat", "no-serde-warnings"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
