[package]
name = "tmv-backend-api"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
mime_guess.workspace = true
percent-encoding.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
url.workspace = true
tmv-backend-core = { path = "../tmv-backend-core" }
