[package]
name = "tmv-backend-index"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
deadpool-sqlite = "0.13.0"
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "check_deadpool"
path = "src/bin.rs"
